# rvc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.claude/commands/: github-issue.md  implementation.md
.claude/skills/: github-issue.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
crates/rs-vc/: Cargo.toml
crates/rs-vc/src/: lib.rs
crates/rvc/: Cargo.toml  build.rs
crates/rvc/src/: lib.rs
crates/rvc/src/duty_tracker/: mod.rs  service.rs
docs/: architecture.md
proto/: duty_tracker.proto
