[workspace]
members = ["bin/rvc", "crates/rvc"]
default-members = ["bin/rvc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rootwarp/rvc"

[workspace.dependencies]
# Internal
rvc = { path = "crates/rvc" }

# External
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
tonic = "0.12"
prost = "0.13"

[workspace.dependencies.tonic-build]
version = "0.12"
